--- a/chrome/userContent.css
+++ b/chrome/userContent.css
@@ -9,6 +9,8 @@
   body {
     background-image: url(bg.jpg), url(bg.png);
     background-size: cover}
-  
-  .personalize-button, .customize-menu {display: none !important}
+
+  .icon.icon-settings {opacity: .5}
+
+  .wallpaper-attribution {display: none}
 }
