--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -284,7 +284,9 @@ panel {
 
 .urlbarView-url {padding-left: 5px}
 
-.urlbarView-row[label] {margin-block-start: 0 !important}
+.urlbarView-row[label="Firefox Suggest"] {margin-block-start: 0 !important}
+
+.urlbarView-userContext {border-top: 2px solid var(--identity-tab-color) !important}
 
 #identity-box,
 #urlbar-label-box,
